# fluiddecomposition

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: gh-pages.yml  hugo.yml
doc/: hugo.toml
doc/assets/: _custom.scss
doc/content/: _index.md
doc/content/docs/DMD/: 001pod.md  002dmd.md  _index.md  aprrox-rank.md
doc/resources/_gen/assets/: book.scss_b807c86e8030af4cdc30edccea379f5f.content  book.scss_b807c86e8030af4cdc30edccea379f5f.json
doc/themes/hugo-book/layouts/_default/: baseof.html
doc/themes/hugo-book/layouts/partials/docs/: header.html  menu-filetree.html  menu-hugo.html
examples/: dmd_demo.cpp  pod_demo.cpp
include/: dmd.hpp  flow_utils.hpp  pod.hpp
scripts/: plot_dmd_spectrum.py  plot_singular_values.py  visualize_flow.py
src/: dmd.cpp  flow_utils.cpp  pod.cpp
